<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:attr/selectableItemBackground"
    android:paddingTop="@dimen/md_keylines"
    android:paddingRight="6dp"
    android:paddingLeft="6dp"
    android:paddingBottom="@dimen/md_keylines">

    <com.example.android.hacktxsafe.RoundedImageView
        android:id="@+id/list_avatar"
        android:layout_width="@dimen/avator_size"
        android:layout_height="@dimen/avator_size"
        android:scaleType="centerCrop"
        tools:src="@drawable/a_avator" />

    <TextView
        android:id="@+id/list_title"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/md_keylines"
        android:layout_toRightOf="@+id/list_avatar"
        tools:text="@string/item_title"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/article_subheading"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/list_desc"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_title"
        android:layout_marginLeft="@dimen/md_keylines"
        android:layout_toRightOf="@+id/list_avatar"
        android:textColor="@color/medium_grey"
        android:ellipsize="end"
        android:singleLine="true"
        tools:text="@string/item_desc"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/list_body" />

    <Button
        android:id="@+id/add_contact"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/add_contact_label"
        android:drawableLeft="@drawable/ic_add_circle_outline_black_24dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/primary"
        android:layout_alignParentRight="true"
        android:background="@drawable/outline_button_bg"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:drawableTint="@color/primary"/>

    <Button
        android:id="@+id/invite_contact"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/invite_contact_label"
        android:drawableLeft="@drawable/ic_add_circle_outline_black_24dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/primary"
        android:layout_alignParentRight="true"
        android:background="@drawable/outline_button_bg"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:drawableTint="@color/primary" />

</RelativeLayout>
